fixing file sizes

--- a/frontend/src/app/features/analyzer/components/analyzer-page/analyzer-page.component.html
+++ b/frontend/src/app/features/analyzer/components/analyzer-page/analyzer-page.component.html
@@ -6,7 +6,7 @@
         <mat-icon>arrow_back</mat-icon>
       </button>
       <div class="header-text">
-        <h1>Library Analysis</h1>
+        <h1>{{ getPageTitle() }}</h1>
         <p>Comprehensive analysis of your media library</p>
       </div>
     </div>
