--- a/frontend/src/app/features/analyzer/components/analyzer-page/analyzer-page.component.html
+++ b/frontend/src/app/features/analyzer/components/analyzer-page/analyzer-page.component.html
@@ -9,6 +9,18 @@
         <h1>{{ getPageTitle() }}</h1>
         <p>Comprehensive analysis of your media library</p>
       </div>
+      
+      <!-- Common Limit Selector -->
+      <div class="header-controls" *ngIf="libraryId">
+        <mat-form-field appearance="outline" class="limit-selector">
+          <mat-label>Items to Analyze</mat-label>
+          <mat-select [(ngModel)]="selectedLimit" (selectionChange)="onLimitChange()">
+            <mat-option *ngFor="let option of limitOptions" [value]="option.value">
+              {{ option.label }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
     </div>
   </div>
 
@@ -22,21 +34,21 @@
       <!-- Size Analysis Tab -->
       <mat-tab label="Size Analysis">
         <ng-template matTabContent>
-          <app-size-analysis [libraryId]="libraryId"></app-size-analysis>
+          <app-size-analysis [libraryId]="libraryId" [limit]="selectedLimit"></app-size-analysis>
         </ng-template>
       </mat-tab>
 
       <!-- Quality Analysis Tab -->
       <mat-tab label="Quality Analysis">
         <ng-template matTabContent>
-          <app-quality-analysis [libraryId]="libraryId"></app-quality-analysis>
+          <app-quality-analysis [libraryId]="libraryId" [limit]="selectedLimit"></app-quality-analysis>
         </ng-template>
       </mat-tab>
 
       <!-- Content Analysis Tab -->
       <mat-tab label="Content Analysis">
         <ng-template matTabContent>
-          <app-content-analysis [libraryId]="libraryId"></app-content-analysis>
+          <app-content-analysis [libraryId]="libraryId" [limit]="selectedLimit"></app-content-analysis>
         </ng-template>
       </mat-tab>
 
